<resources>
    <string name="feedback">反馈</string>
    <string name="juejin">掘金</string>
    <string name="jianshu">简书</string>
    <string name="github">GitHub</string>

    <string name="project_name">图书馆座位预约系统</string>
    <string name="en_project_name">Library Seat Reservation System</string>
    <string name="copyRight">齐齐哈尔大学IT极客社版权所有</string>
    <string name="en_copyRight">Copyright Right © 2012-2013 leosys.com.cn</string>


    <string name="update">检查更新</string>
    <string name="update_fail">检查更新失败</string>

    <string name="api_old">旧API</string>
    <string name="api_new">新API</string>
    <string name="layout_relative">RelativeLayout布局</string>
    <string name="layout_constraint">ConstraintLayout布局</string>
    <string name="local_image">本地图片</string>
    <string name="scan">扫码</string>
    <string name="scan_debug">扫码(DEBUG)</string>
    <string name="flash_open">开启闪光灯</string>
    <string name="flash_close">关闭闪光灯</string>

    <string name="tips_scan">将二维码/条码放入框内，即可自动扫描</string>
    <string name="tips_scan_debug">解析图像每秒%1$d帧，平均耗时%2$dms</string>

    <string name="app_name">自习室助手</string>
    <string name="text_setting">设置</string>

    <string name="text_login">登录</string>
    <string name="text_registered">注册</string>
    <string name="text_forget_password">忘记密码</string>

    <string name="text_express_query">快递查询</string>
    <string name="text_belonging_query">归属地查询</string>
    <string name="text_download_update">下载更新</string>
    <string name="text_my_qrcode">我的二维码</string>
    <string name="text_my_location">我的位置</string>
    <string name="text_about_app">关于软件</string>

    <string name="text_butler_service">服务管家</string>
    <string name="text_wechat">微信精选</string>
    <string name="text_girl">美女社区</string>
    <string name="text_user_info">个人中心</string>

    <string name="text_hello_tts">你好，我是小优！</string>
    <string name="text_more_length">输入长度超出限制</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="text_welfare">福利</string>
    <string name="text_boy">男</string>
    <string name="text_girl_f">女</string>
    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
    <string name="text_editor_success">修改成功</string>
    <string name="text_editor_failure">修改失败</string>
    <string name="text_registered_successful">注册成功</string>
    <string name="text_registered_failure">注册失败：</string>
    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
    <string name="text_app_name">应用名:</string>
    <string name="text_version">版本号:</string>
    <string name="text_website_address">官网:www.imooc.com</string>
    <string name="text_email_send_ok">邮箱已经发送至：</string>
    <string name="text_email_send_no">邮箱发送失败</string>
    <string name="reset_successfully">重置密码成功</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="text_test_version">"检测版本: "</string>
    <string name="text_Ddwnload_successful">下载成功</string>
    <string name="text_dwnload_failure">下载失败</string>
    <string name="text_unknown">未知</string>
    <string name="text_courier_company">快递公司</string>
    <string name="text_courier_number">快递单号</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_email">给个邮箱地址，我们还是好朋友</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_keep_password">记住密码</string>
    <string name="text_input_phone">请输入号码</string>
    <string name="text_query">查询</string>
    <string name="text_user_name">用户名</string>
    <string name="text_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_password">密码</string>
    <string name="text_register_remind">我们为你的信息安全保驾护航</string>

    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_title_5">二维码分享</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_setting_content_4">扫描二维码或者条形码</string>
    <string name="text_setting_content_5">把自己分享给朋友吧</string>
    <string name="text_setting_content_6">时刻掌握自身位置</string>
    <string name="text_setting_content_7">www.imooc.com</string>
    <string name="text_now_login">正在登陆...</string>
</resources>
