<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    tools:context="com.example.a13608.tab01.avtivity.loginActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginBottom="40.0dip"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="50.0dip"
            android:layout_height="40.0dip" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:textSize="24.0sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name" />
            <TextView android:textSize="12.0sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_project_name" />
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="5.0dip"
        android:background="@drawable/edit_bg"
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="用户名"/>

    <EditText
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/lock_icon"
        android:drawablePadding="5.0dip"
        android:background="@drawable/edit_bg"
        android:inputType="numberPassword"
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="密码"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/keep_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/text_keep_password"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_login"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_registered"
        android:textColor="@android:color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/text_forget_password"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15.0dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp"
            android:textColor="@color/gray_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyRight" />
        <TextView android:textSize="10.0sp"
            android:textColor="@color/gray_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_copyRight" />
    </LinearLayout>
</LinearLayout>
